--- a/start_26_05_2023_app/myapp/src/components/ChatElement/ChatElement.css
+++ b/start_26_05_2023_app/myapp/src/components/ChatElement/ChatElement.css
@@ -9,6 +9,10 @@
   color: rgb(112, 117, 121);
 }
 
+.ChatElement--blue {
+  background-color: #1f82ed;
+}
+
 .ChatElement:hover {
   background-color: rgb(244, 244, 245);
 }
