--- a/start_26_05_2023_app/myapp/src/components/ChatElement/ChatElement.css
+++ b/start_26_05_2023_app/myapp/src/components/ChatElement/ChatElement.css
@@ -11,9 +11,10 @@
 
 .ChatElement--blue {
   background-color: #1f82ed;
+  color: white;
 }
 
-.ChatElement:hover {
+.ChatElement:hover:not(.ChatElement--blue) {
   background-color: rgb(244, 244, 245);
 }
 
@@ -23,10 +24,16 @@
   border-radius: 50%;
 }
 
+.ChatElement--blue .ChatElement__title {
+  color: white;
+}
+
 .ChatElement__title {
   font-weight: bold;
   color: black;
 }
+
+
 
 .ChatElement__time {
   position: absolute;
