--- a/start_26_05_2023_app/myapp/src/components/Icon/Icon.css
+++ b/start_26_05_2023_app/myapp/src/components/Icon/Icon.css
@@ -1,9 +1,9 @@
-.MenuIcon {
+.Icon {
   font-size: 18px;
   color: rgb(112, 117, 121);
 }
 
-.MenuIcon__wrapper {
+.Icon__wrapper {
   width: 40px;
   height: 40px;
 
@@ -17,6 +17,6 @@
   transition: background linear 0.15s;
 }
 
-.MenuIcon__wrapper:hover {
+.Icon__wrapper:hover {
   background-color: rgba(112, 117, 121, 0.08);
 }
